[package]
name = "defmt-example"
version = "0.1.0"
authors = ["Kirill Mikhailov <playfulfence@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp32c6-hal = { version = "0.7.0", features = ["defmt"] }
esp-backtrace = { version = "0.10.0", features = ["esp32c6", "panic-handler", "exception-handler", "print-uart", "defmt-espflash"] }
defmt = "0.3.5"
